--- a/index.html
+++ b/index.html
@@ -38,10 +38,20 @@
           <!-- Contact Information -->
           <ul class="contacts-list">
             <li class="contacts-list-item">
-              <a class="color-accent" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="color-accent" href="mailto:info@devstudio.com">
+                <svg class="envelope">
+                  <use href="./images/icons.svg#envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="contacts-list-item">
-              <a class="color-accent" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="color-accent" href="tel:+380961111111"
+                ><svg class="smartphone">
+                  <use href="./images/icons.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
@@ -61,24 +71,44 @@
           <h2 class="features-title visually-hidden">Особенности</h2>
           <ul class="features-list">
             <li class="features-list-item">
+              <div class="item-svg">
+                <svg class="antenna">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Внимание к деталям</h3>
               <p class="item-descr">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="features-list-item">
+              <div class="item-svg">
+                <svg class="clock">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Пунктуальность</h3>
               <p class="item-descr">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="features-list-item">
+              <div class="item-svg">
+                <svg class="diagram">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Планирование</h3>
               <p class="item-descr">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="features-list-item">
+              <div class="item-svg">
+                <svg class="astronaut">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Современные технологии</h3>
               <p class="item-descr">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -131,6 +161,36 @@
               <div class="item-text">
                 <h3 class="item-title">Игорь Демьяненко</h3>
                 <p class="item-descr">Product Designer</p>
+                <ul class="social-links-list">
+                  <li class="social-links-list-item">
+                    <a href="#">
+                      <svg class="instagram">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-list-item">
+                    <a href="#">
+                      <svg class="twitter">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-list-item">
+                    <a href="#">
+                      <svg class="facebook">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-links-list-item">
+                    <a href="#">
+                      <svg class="linkedin">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -143,6 +203,28 @@
               <div class="item-text">
                 <h3 class="item-title">Ольга Репина</h3>
                 <p class="item-descr">Frontend Developer</p>
+                <ul class="social-links-list">
+                  <li class="social-links-list-item">
+                    <svg class="instagram">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="twitter">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="facebook">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="linkedin">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -150,6 +232,28 @@
               <div class="item-text">
                 <h3 class="item-title">Николай Тарасов</h3>
                 <p class="item-descr">Marketing</p>
+                <ul class="social-links-list">
+                  <li class="social-links-list-item">
+                    <svg class="instagram">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="twitter">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="facebook">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="linkedin">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -157,6 +261,28 @@
               <div class="item-text">
                 <h3 class="item-title">Михаил Ермаков</h3>
                 <p class="item-descr">UI Designer</p>
+                <ul class="social-links-list">
+                  <li class="social-links-list-item">
+                    <svg class="instagram">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="twitter">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="facebook">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-links-list-item">
+                    <svg class="linkedin">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
