--- a/index.html
+++ b/index.html
@@ -205,24 +205,32 @@
                 <p class="item-descr">Frontend Developer</p>
                 <ul class="social-links-list">
                   <li class="social-links-list-item">
-                    <svg class="instagram">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="instagram">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="twitter">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="twitter">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="facebook">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="facebook">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="linkedin">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="linkedin">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -234,24 +242,32 @@
                 <p class="item-descr">Marketing</p>
                 <ul class="social-links-list">
                   <li class="social-links-list-item">
-                    <svg class="instagram">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="instagram">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="twitter">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="twitter">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="facebook">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="facebook">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="linkedin">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="linkedin">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -263,27 +279,85 @@
                 <p class="item-descr">UI Designer</p>
                 <ul class="social-links-list">
                   <li class="social-links-list-item">
-                    <svg class="instagram">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="instagram">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="twitter">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="twitter">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="facebook">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="facebook">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="social-links-list-item">
-                    <svg class="linkedin">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                    <a href="#">
+                      <svg class="linkedin">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="clients section">
+        <div class="container">
+          <h2 class="clients-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="clients-list-item">
+              <a href="#">
+                <svg class="logo-ya-and-co">
+                  <use href="./images/icons.svg#logo-ya-and-co"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="#">
+                <svg class="logo-tagline-here">
+                  <use href="./images/icons.svg#logo-tagline-here"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="#">
+                <svg class="logo-company">
+                  <use href="./images/icons.svg#logo-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="#">
+                <svg class="logo-foster-peters">
+                  <use href="./images/icons.svg#logo-foster-peters"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="#">
+                <svg class="logo-brand">
+                  <use href="./images/icons.svg#logo-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-list-item">
+              <a href="#">
+                <svg class="logo-tag-line">
+                  <use href="./images/icons.svg#logo-tag-line"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
