Added icons design

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <ul class="contacts-list">
             <li class="contacts-list-item">
               <a class="color-accent" href="mailto:info@devstudio.com">
-                <svg class="envelope">
+                <svg class="envelope" width="16" height="12">
                   <use href="./images/icons.svg#envelope"></use>
                 </svg>
                 info@devstudio.com
@@ -47,7 +47,7 @@
             </li>
             <li class="contacts-list-item">
               <a class="color-accent" href="tel:+380961111111"
-                ><svg class="smartphone">
+                ><svg class="smartphone" width="10" height="16">
                   <use href="./images/icons.svg#smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
@@ -72,7 +72,7 @@
           <ul class="features-list">
             <li class="features-list-item">
               <div class="item-svg">
-                <svg class="antenna">
+                <svg class="antenna" width="70" height="70">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
@@ -83,7 +83,7 @@
             </li>
             <li class="features-list-item">
               <div class="item-svg">
-                <svg class="clock">
+                <svg class="clock" width="70" height="70">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
@@ -94,7 +94,7 @@
             </li>
             <li class="features-list-item">
               <div class="item-svg">
-                <svg class="diagram">
+                <svg class="diagram" width="70" height="70">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
@@ -105,7 +105,7 @@
             </li>
             <li class="features-list-item">
               <div class="item-svg">
-                <svg class="astronaut">
+                <svg class="astronaut" width="70" height="70">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
@@ -164,28 +164,28 @@
                 <ul class="social-links-list">
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="instagram">
+                      <svg class="instagram" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="twitter">
+                      <svg class="twitter" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="facebook">
+                      <svg class="facebook" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="linkedin">
+                      <svg class="linkedin" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -206,28 +206,28 @@
                 <ul class="social-links-list">
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="instagram">
+                      <svg class="instagram" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="twitter">
+                      <svg class="twitter" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="facebook">
+                      <svg class="facebook" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="linkedin">
+                      <svg class="linkedin" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -243,28 +243,28 @@
                 <ul class="social-links-list">
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="instagram">
+                      <svg class="instagram" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="twitter">
+                      <svg class="twitter" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="facebook">
+                      <svg class="facebook" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="linkedin">
+                      <svg class="linkedin" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -280,28 +280,28 @@
                 <ul class="social-links-list">
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="instagram">
+                      <svg class="instagram" width="20" height="20">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="twitter">
+                      <svg class="twitter" width="20" height="20">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="facebook">
+                      <svg class="facebook" width="20" height="20">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-links-list-item">
                     <a href="#">
-                      <svg class="linkedin">
+                      <svg class="linkedin" width="20" height="20">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
@@ -319,42 +319,42 @@
           <ul class="clients-list">
             <li class="clients-list-item">
               <a href="#">
-                <svg class="logo-ya-and-co">
+                <svg class="logo-ya-and-co" width="106" height="60">
                   <use href="./images/icons.svg#logo-ya-and-co"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
-                <svg class="logo-tagline-here">
+                <svg class="logo-tagline-here" width="106" height="60">
                   <use href="./images/icons.svg#logo-tagline-here"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
-                <svg class="logo-company">
+                <svg class="logo-company" width="106" height="60">
                   <use href="./images/icons.svg#logo-company"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
-                <svg class="logo-foster-peters">
+                <svg class="logo-foster-peters" width="106" height="60">
                   <use href="./images/icons.svg#logo-foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
-                <svg class="logo-brand">
+                <svg class="logo-brand" width="106" height="60">
                   <use href="./images/icons.svg#logo-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
-                <svg class="logo-tag-line">
+                <svg class="logo-tag-line" width="106" height="60">
                   <use href="./images/icons.svg#logo-tag-line"></use>
                 </svg>
               </a>
@@ -367,26 +367,61 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container">
-        <a class="logo" href="./index.html">Web<span class="logo-light-part">Studio</span></a>
-        <address class="address-info">
-          <ul class="address-info-list">
-            <li class="address-info-list-item">
-              <a
-                class="address color-accent"
-                href="https://goo.gl/maps/5Cw5wHXfv2F4CqR76"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+        <div class="contacts">
+          <a class="logo" href="./index.html">Web<span class="logo-light-part">Studio</span></a>
+          <address class="address-info">
+            <ul class="address-info-list">
+              <li class="address-info-list-item">
+                <a
+                  class="address color-accent"
+                  href="https://goo.gl/maps/5Cw5wHXfv2F4CqR76"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="address-info-list-item">
+                <a class="color-accent" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="address-info-list-item">
+                <a class="color-accent" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="connect-links">
+          <p class="connect-links-title">присоединяйтесь</p>
+          <ul class="social-links-list">
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="instagram" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-info-list-item">
-              <a class="color-accent" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="twitter" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-info-list-item">
-              <a class="color-accent" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="facebook" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
