--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,20 @@
           <!-- Contact Information -->
           <ul class="contacts-list">
             <li class="contacts-list-item">
-              <a class="color-accent" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="color-accent" href="mailto:info@devstudio.com">
+                <svg class="envelope" width="16" height="12">
+                  <use href="./images/icons.svg#envelope"></use>
+                </svg>
+                info@devstudio.com
+              </a>
             </li>
             <li class="contacts-list-item">
-              <a class="color-accent" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="color-accent" href="tel:+380961111111"
+                ><svg class="smartphone" width="10" height="16">
+                  <use href="./images/icons.svg#smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
@@ -187,26 +197,61 @@
     <!-- Footer -->
     <footer class="page-footer">
       <div class="container">
-        <a class="logo" href="./index.html">Web<span class="logo-light-part">Studio</span></a>
-        <address class="address-info">
-          <ul class="address-info-list">
-            <li class="address-info-list-item">
-              <a
-                class="address color-accent"
-                href="https://goo.gl/maps/5Cw5wHXfv2F4CqR76"
-                target="_blank"
-                rel="noopener noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+        <div class="contacts">
+          <a class="logo" href="./index.html">Web<span class="logo-light-part">Studio</span></a>
+          <address class="address-info">
+            <ul class="address-info-list">
+              <li class="address-info-list-item">
+                <a
+                  class="address color-accent"
+                  href="https://goo.gl/maps/5Cw5wHXfv2F4CqR76"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="address-info-list-item">
+                <a class="color-accent" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="address-info-list-item">
+                <a class="color-accent" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="connect-links">
+          <p class="connect-links-title">присоединяйтесь</p>
+          <ul class="social-links-list">
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="instagram" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-info-list-item">
-              <a class="color-accent" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="twitter" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-info-list-item">
-              <a class="color-accent" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="facebook" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-links-list-item">
+              <a href="#">
+                <svg class="linkedin" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
